spacing issue and reordering of elements

--- a/style.css
+++ b/style.css
@@ -24,7 +24,7 @@ a:hover::before {
 }
 
 a:hover::after {
-content: ' >';
+	content: ' >';
 }
 .container{
 	position: absolute;
@@ -39,7 +39,7 @@ content: ' >';
 	background-size: cover;
 }
 .button-1, .button-2, .button-3, .button-4{
-	width: 33%;
+	width: 33.4%;
 	height: 18%;
     transition-property: height;
     transition-duration: .6s;
@@ -64,8 +64,6 @@ content: ' >';
 	background: #875e56;
 	opacity: .7;
 }
-
-
 .menu-1, .menu-2, .menu-3, .menu-4{
 	position: relative;
 	visibility: hidden;
